Fix z-index search bar header issue

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -353,7 +353,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 1050;
+    z-index: 5;
 }
 
 
